# My-Little-Pong

./: .gitignore  README.md  pyproject.toml
pong/source/: main.py
pong/source/theater/: __init__.py  actor.py  color.py  config.py  director.py  glitter.py  performer.py  plaudit.py  utility.py
